--- a/src/main/resources/templates/user/user-chat.html
+++ b/src/main/resources/templates/user/user-chat.html
@@ -248,7 +248,105 @@
             pickerPosition: 'top'
         });
     });
+window.onload = async () => {
+    const toggleCheckbox = document.getElementById("toggle-checkbox");
+    const toggleKnob = document.getElementById("toggle-knob");
+    const userStatus = await checkStatusForUser();
+    if (userStatus.isOn === 'ON') {
+        toggleCheckbox.checked = false;
+    } else {
+        toggleCheckbox.checked = true;
+    }
+    toggleCheckbox.addEventListener("change", async function() {
+        if (toggleCheckbox.checked) {
+            console.log("OFF");
+            const data = await fetch(`/user/turn-off-noti`,{
+                method:'PUT',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body:JSON.stringify({ isOn: 'OFF' })
+            });
+            if(!data.ok){
+                console.log('something wrong please try again!');
+            }
+            const res = await data.text();
+            let alertMessage = `${res}`;
+            let alertStyle = `
+            background-color: green;
+            color: white;
+            border: 1px solid #cc0000;
+             border-radius: 15px;
+        `;
+            let styledAlert = document.createElement('div');
+            styledAlert.style.cssText = `
+            ${alertStyle}
+            position: fixed;
+            top: 25%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 10000;
+            display: none;
+        `;
+            styledAlert.innerHTML = alertMessage;
 
+
+            document.body.appendChild(styledAlert);
+
+
+            styledAlert.style.display = 'block';
+
+            setTimeout(function () {
+                styledAlert.style.display = 'none';
+            }, 3000);
+        } else {
+            console.log("ON");
+            const data = await fetch(`/user/turn-on-noti`,{
+                method:'PUT',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body:JSON.stringify({ isOn: 'ON' })
+            });
+            if(!data.ok){
+                console.log('something wrong please try again!');
+            }
+            const res = await data.text();
+            let alertMessage = `${res}`;
+            let alertStyle = `
+            background-color: green;
+            color: white;
+            border: 1px solid #cc0000;
+             border-radius: 15px;
+        `;
+            let styledAlert = document.createElement('div');
+            styledAlert.style.cssText = `
+            ${alertStyle}
+            position: fixed;
+            top: 25%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 10000;
+            display: none;
+        `;
+            styledAlert.innerHTML = alertMessage;
+
+
+            document.body.appendChild(styledAlert);
+
+
+            styledAlert.style.display = 'block';
+
+            setTimeout(function () {
+                styledAlert.style.display = 'none';
+            }, 3000);
+        }
+    });
+}
     let currentPageForEach = '0';
     let isFetchingForEach = false;
     let hasMoreForEach = true;
@@ -567,8 +665,15 @@
                 const postId = this.dataset.postId; // 'this' refers to the current notification element
                 console.log('PostId', postId);
                 const postElement = document.getElementById(postId);
+                const pElement = this.querySelector('p');
                 if (postElement) {
                     postElement.scrollIntoView({ behavior: 'smooth', block: 'center' });
+                }else{
+                    if (pElement) {
+                        localStorage.setItem('commentOrReply',pElement.textContent);
+                    }
+                    localStorage.setItem('trendPostIdForSinglePost',postId);
+                    window.location.href = `/user-details-post`
                 }
             });
         });
@@ -785,6 +890,11 @@
         return response;
     }
 
+    async function checkStatusForUser(){
+        const data = await fetch(`/user/check-notiStatus`);
+        const res = await data.json();
+        return res;
+    }
     //for invitation end
 
 </script>
