--- a/src/main/resources/templates/user/user-group.html
+++ b/src/main/resources/templates/user/user-group.html
@@ -558,6 +558,104 @@
                     usersList.appendChild(option);
                 }
             });
+
+        const toggleCheckbox = document.getElementById("toggle-checkbox");
+        const toggleKnob = document.getElementById("toggle-knob");
+        const userStatus = await checkStatusForUser();
+        if (userStatus.isOn === 'ON') {
+            toggleCheckbox.checked = false;
+        } else {
+            toggleCheckbox.checked = true;
+        }
+        toggleCheckbox.addEventListener("change", async function() {
+            if (toggleCheckbox.checked) {
+                console.log("OFF");
+                const data = await fetch(`/user/turn-off-noti`,{
+                    method:'PUT',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body:JSON.stringify({ isOn: 'OFF' })
+                });
+                if(!data.ok){
+                    console.log('something wrong please try again!');
+                }
+                const res = await data.text();
+                let alertMessage = `${res}`;
+                let alertStyle = `
+            background-color: green;
+            color: white;
+            border: 1px solid #cc0000;
+             border-radius: 15px;
+        `;
+                let styledAlert = document.createElement('div');
+                styledAlert.style.cssText = `
+            ${alertStyle}
+            position: fixed;
+            top: 25%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 10000;
+            display: none;
+        `;
+                styledAlert.innerHTML = alertMessage;
+
+
+                document.body.appendChild(styledAlert);
+
+
+                styledAlert.style.display = 'block';
+
+                setTimeout(function () {
+                    styledAlert.style.display = 'none';
+                }, 3000);
+            } else {
+                console.log("ON");
+                const data = await fetch(`/user/turn-on-noti`,{
+                    method:'PUT',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body:JSON.stringify({ isOn: 'ON' })
+                });
+                if(!data.ok){
+                    console.log('something wrong please try again!');
+                }
+                const res = await data.text();
+                let alertMessage = `${res}`;
+                let alertStyle = `
+            background-color: green;
+            color: white;
+            border: 1px solid #cc0000;
+             border-radius: 15px;
+        `;
+                let styledAlert = document.createElement('div');
+                styledAlert.style.cssText = `
+            ${alertStyle}
+            position: fixed;
+            top: 25%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 10000;
+            display: none;
+        `;
+                styledAlert.innerHTML = alertMessage;
+
+
+                document.body.appendChild(styledAlert);
+
+
+                styledAlert.style.display = 'block';
+
+                setTimeout(function () {
+                    styledAlert.style.display = 'none';
+                }, 3000);
+            }
+        });
         });
 
     async function fetchCommunities() {
@@ -1714,6 +1812,12 @@
         return res;
     }
 
+    async function checkStatusForUser(){
+        const data = await fetch(`/user/check-notiStatus`);
+        const res = await data.json();
+        return res;
+    }
+
     async function deletedNotificationForEach(id){
         const deleteNoti = await fetch(`/delete-noti/${id}`,{
             method:'DELETE'
@@ -1739,8 +1843,15 @@
                 const postId = this.dataset.postId; // 'this' refers to the current notification element
                 console.log('PostId', postId);
                 const postElement = document.getElementById(postId);
+                const pElement = this.querySelector('p');
                 if (postElement) {
                     postElement.scrollIntoView({ behavior: 'smooth', block: 'center' });
+                }else{
+                    if (pElement) {
+                        localStorage.setItem('commentOrReply',pElement.textContent);
+                    }
+                    localStorage.setItem('trendPostIdForSinglePost',postId);
+                    window.location.href = `/user-details-post`
                 }
             });
         });
