--- a/src/main/resources/templates/layout/user-record.html
+++ b/src/main/resources/templates/layout/user-record.html
@@ -210,6 +210,47 @@
             </div>
         </main>
 
+        <div class="modal fade  " id="loadingModalBox" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+       <div class="modal-dialog">
+           <div class="modal-content border rounded-1" style="width:300px; margin-left:100px;">
+
+               <div id="markBox" class="hidden">
+                   <div class="check_mark">
+                       <div class="sa-icon sa-success animate">
+                           <span class="sa-line sa-tip animateSuccessTip"></span>
+                           <span class="sa-line sa-long animateSuccessLong"></span>
+                           <div class="sa-placeholder"></div>
+                           <div class="sa-fix"></div>
+                       </div>
+                   </div>
+                   <div>
+                       <button id="restart" style="background-color: #3192e0; border-radius: 10px; color:white; margin-left: 109px; margin-bottom: 20px;; " class="btn   " data-bs-dismiss="modal"
+                               onclick="setToNormal()">Continue
+                       </button>
+                   </div>
+               </div>
+
+
+                   <div class="loader"></div>
+
+
+               <!-- <div id="catBox" class="">
+                   <div class="box">
+                       <div class="cat">
+                           <div class="cat__body"></div>
+                           <div class="cat__body"></div>
+                           <div class="cat__tail"></div>
+                           <div class="cat__head"></div>
+                       </div>
+                   </div>
+               </div> -->
+
+
+           </div>
+       </div>
+   </div>
+
         <div th:replace="~{index::footer}"></div>
         <script src="https://code.jquery.com/jquery-3.7.1.js"
                 integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
